[gd_scene load_steps=9 format=3 uid="uid://dukxh1jjkbo3f"]

[ext_resource type="Script" path="res://Player/Attack/javelin.gd" id="1_bjmb5"]
[ext_resource type="Texture2D" uid="uid://c5g3uj84kyqx7" path="res://Textures/Items/Weapons/javelin_3_new.png" id="2_7eqca"]
[ext_resource type="AudioStream" uid="uid://cs7ttd57cysay" path="res://Audio/SoundEffect/woosh.wav" id="3_dwy3a"]
[ext_resource type="PackedScene" uid="uid://cd86tupdixsxb" path="res://Core/state_machine.tscn" id="4_k2368"]
[ext_resource type="Script" path="res://Player/Attack/idle_state.gd" id="5_jpcvr"]
[ext_resource type="Script" path="res://Player/Attack/attack_state.gd" id="6_p2bd6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6esdk"]
size = Vector2(3.53554, 33.6378)

[sub_resource type="GDScript" id="GDScript_bnhmm"]
script/source = "extends AudioStreamPlayer


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	pass
"

[node name="Javelin" type="Area2D" groups=["attack"]]
scale = Vector2(0.1, 0.1)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_bjmb5")
duration_once_attack = 1.2
periodOfHitToTheSameEnemy = 1.0

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_7eqca")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(1.19209e-07, -1.19209e-07)
rotation = -0.785398
shape = SubResource("RectangleShape2D_6esdk")
disabled = true

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_dwy3a")
volume_db = -20.0
script = SubResource("GDScript_bnhmm")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("4_k2368")]
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack")]
unique_name_in_owner = true
script = ExtResource("5_jpcvr")
attack = NodePath("../..")

[node name="AttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack")]
unique_name_in_owner = true
script = ExtResource("6_p2bd6")
attack = NodePath("../..")
